# deep-translator-dev

./: .gitignore  README.md  pyproject.toml
deep_translator/: __init__.py  baidu.py  base.py  chatgpt.py  claude.py  cli.py  constants.py  deepl.py  detection.py  eunoia.py  exceptions.py  gemini.py  google.py  libre.py  linguee.py  microsoft.py  mymemory.py  papago.py  pons.py  qcri.py  tencent.py  validate.py  yandex.py
tests/: test_claude.py  test_eunoia.py  test_gemini.py
