[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["deep_translator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.poetry]
name = "deep-translator"
version = "1.11.4"
description = "A flexible free and unlimited python tool to translate between different languages in a simple way using multiple translators"
license = "MIT"
authors = ["Nidhal Baccouri <nidhalbacc@gmail.com>"]
maintainers = ["Nidhal Baccouri <nidhalbacc@gmail.com>", "Chris Trenthem <trenthemc@gmail.com>"]
readme = "docs/README.rst"
homepage = "https://github.com/nidhaloff/deep_translator"
repository = "https://github.com/nidhaloff/deep_translator"
documentation = "https://deep-translator.readthedocs.io/en/latest/"
keywords = ["deep_translator", "deepL", "DeeplTranslator", "translator", "translation", "automation", "web scraping", "google translator", "google translation", "google trans", "PONS", "YANDEX", "MyMemory translator", "Linguee", "QcriTranslator", "Language", "Language detection", "detect language", "free translation", "unlimited translation", "translate for free"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Communications",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent"]
packages = [{include="deep_translator"}]
[tool.poetry.scripts]
deep-translator = 'deep_translator.__main__:main'
dt = 'deep_translator.__main__:main'

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.9.1"
requests = "^2.23.0"
docx2txt = {version = "^0.8", optional = true}
pypdf = {version = "^3.3.0", optional = true}
openai = {version = "^1.0", optional = true}
google-generativeai = {version = "^0.8.0", optional = true}
anthropic = {version = "^0.40.0", optional = true}
optimum = {version = "^1.17.0", optional = true}
onnxruntime = {version = "^1.17.0", optional = true}
transformers = {version = "^4.40.0", optional = true}
sentencepiece = {version = "^0.2.0", optional = true}

[tool.poetry.extras]
docx = ["docx2txt"]
pdf = ["pypdf"]
ai = ["openai", "google-generativeai", "anthropic"]
onnx = ["optimum", "onnxruntime", "transformers", "sentencepiece"]

[tool.poetry.dev-dependencies]
wheel = "^0.38.4"
coverage = "^7.4"
Sphinx = "^7.2"
twine = "^5.0"
pytest = "^8.0"
ruff = "^0.8"
python-semantic-release = "^9.0"
pre-commit = "^3.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]
